--- a/index.html
+++ b/index.html
@@ -5,84 +5,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>IAM</title>
+  <title>Imran Ali Mirza</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Lato:wght@300&family=Marck+Script&display=swap" rel="stylesheet">
+
 </head>
 
+
 <body>
-  <table cellspacing='20'>
-    <tr>
-      <td> <img src="/Users/Imran/Desktop/pythonfiles/web development/HTML-personalsite/static/profilepic.jpg" height=200 alt="profile pic"></td>
-      <td>
-        <h1>Imran Ali Mirza</h1>
-        <p><em><strong>Pharmacist</strong> and <strong>self taught web developer </strong> working to make pharmacy more efficient using web solutions. </em></p>
-      </td>
-    </tr>
-  </table>
+  <div class="topcontainer">
+
+    <img class="roadpic" src="images/road.jpg" alt="road">
+
+    <div class="heading">
+      <h1>Imran Ali Mirza</h1>
+      <h2>Pharmacist and Programmer</h2>
+    </div>
+
+  </div>
+
+
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class='profilepic' src="images/profilepic.jpg" alt="profilepic">
+      <h4>👋🏼 <em>Hello</em></h4>
+      <p class="intro">After qualifying as a pharmacist and managing several pharmacies I became frustrated with the inefficiencies presented on a day to day basis which could so easily be automated and/or improved. Consequently, I decided to self train as a
+        programmer to acquire the skills and tools to allow me to create solutions to problems I and many of my colleagues encounter. This website is a introduction to me and a presentation of the apps I have been developing in my journey. My goal is to contribute towards building a more efficient world starting with the pharmacy industry.</p>
+    </div>
+
+    <hr>
+
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <img class='pharmcross' src="images/pharmacy.png" alt="pharmcross">
+        <h3><em>Pharmacy</em></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <img class='codepic' src="images/code.png" alt="codepic">
+        <h3><em>Programming</em></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3></h3>
+      <p class="contacttxt">Contact me by sending an Email or message through LinkedIn:</p>
+
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+
+    <a class="btn" href="mailto:delivertoiam@gmail.com">Send Email</a>
+    <a class="btn"
+      href="https://uk.linkedin.com/in/imran-ali-mirza-07344853?challengeId=AQGIWdaVsMv94gAAAXJsTjJqToN4RaFQTcrz9drVo9I8qvUFqcTIsGPGw4ViCAZ-tZZXUxv8pV5bdvPAlFelZv1c8fY0mPOXYw&submissionId=193c751d-1c35-1416-cd0c-c439c91d7408">LinkedIn</a>
+
+  </div>
+
+  <br>
+
+  <div class="copyright">
+    <p>© 2020 Imran Ali Mirza</p>
+  </div>
+
+
+
+
 </body>
-
-<hr>
-
-<a href="education.html">Education</a>
-
-<a href="workexp.html">Work Experience</a>
-
-<a href="contact.html">Contact info</a>
-
-<hr>
-
-<h2>Skills</h2>
-  <table cellspacing='10'>
-    <thead>
-    <tr>
-      <th>Pharmacy</th>
-      <th>Rating</th>
-      <th>Web Development</th>
-      <th>Rating</th>
-    </tr>
-    </thead>
-    <tbody>
-
-      <tr>
-        <td>MUR</td>
-        <td>✅</td>
-        <td>HTML</td>
-        <td>⭐️⭐️⭐️</td>
-      </tr>
-
-      <tr>
-        <td>Flu Jab </td>
-        <td>✅</td>
-        <td>CSS</td>
-        <td>⭐️⭐️⭐️</td>
-      </tr>
-
-      <tr>
-        <td>CPPE Sepsis </td>
-        <td>✅</td>
-        <td>JavaScript</td>
-        <td>⭐️⭐️⭐️</td>
-      </tr>
-
-      <tr>
-        <td>Safeguarding </td>
-        <td>✅</td>
-        <td>Python</td>
-        <td>⭐️⭐️⭐️</td>
-      </tr>
-
-      <tr>
-        <td>Oral Health</td>
-        <td>✅</td>
-      </tr>
-
-      <tr>
-        <td>CPPE Risk Management</td>
-        <td>✅</td>
-      </tr>
-
-
-    </tbody>
-  </table>
 
 
 
